Complete code inspection and resolve deprecations